Fri Jan 27 21:33:26 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/InfoRepo/DCPSInfo_i.cpp:
        * tests/DCPS/RtpsDiscovery/RtpsDiscoveryTest.cpp:
        * tests/DCPS/SetQosDeadline/subscriber.cpp:
        * tests/DCPS/TestFramework/TestFramework.cpp:

          Fuzz.

Fri Jan 27 19:52:34 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * bin/dcps_tests.lst:

          Added SharedTransport RTPS tests.

        * tests/DCPS/SharedTransport/SharedTransport.mpc:
        * tests/DCPS/SharedTransport/TestCase.cpp:
        * tests/DCPS/SharedTransport/rtps.ini:
        * tests/DCPS/SharedTransport/rtps_disc.ini:
        * tests/DCPS/SharedTransport/run_test.pl:

          Add test cases for RTPS.

        * tests/DCPS/TestFramework/TestFramework.cpp:

          Save a reference to the DomainParticipantFactory.

        * tests/DCPS/CompatibilityTest/CompatibilityTest.mpc:
        * tests/DCPS/CompatibilityTest/publisher.cpp:
        * tests/DCPS/CompatibilityTest/subscriber.cpp:
        * tests/DCPS/DCPSInfoRepo/dcpsinfo_test.mpc:

          Static build fixes.

Fri Jan 27 18:37:15 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/DCPSInfoRepo/run_test.pl:

          Updates to make DCPSInfoRepo test run for RTPS discovery (fails).

Fri Jan 27 18:07:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * DDS_TAOv2_all.mwc:

          Added nslist and its required library.

Fri Jan 27 17:48:31 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:

          Remove false returns due to incompatible qos change.
          Remove compatibleQosChange methods.

        * dds/DCPS/DCPS_Utils.h:
        * dds/DCPS/DCPS_Utils.cpp:

          Remove should_check_compatibility_upon_change methods.

        * dds/DCPS/DataReaderImpl.cpp: